Update login link

--- a/FinalProject-Bagatua,Restauro/index.html
+++ b/FinalProject-Bagatua,Restauro/index.html
@@ -22,7 +22,7 @@
             <span></span>
             <a href="#contact" class="scroll-to-contact"><i class="fa-solid fa-phone-volume"></i>Contact Us</a>
             <span></span>
-            <a href="Paynal-Pradjek/FinalProject-Bagatua%2CRestauro/pages/login.html"><i class="fa-solid fa-user"></i>Login</a>
+            <a href="/pages/login.html"><i class="fa-solid fa-user"></i>Login</a>
         </nav>
         <button id="navbutton"><i class="fa-solid fa-bars"></i></button>
         <div id="wika">
