--- a/FinalProject-Bagatua,Restauro/login.html
+++ b/FinalProject-Bagatua,Restauro/login.html
@@ -26,7 +26,7 @@
             <span></span>
             <a href="login.html"  class="current"><i class="fa-solid fa-user"></i>Login</a>
         </nav>
-        <button id="navbutton"><i class="fa-solid fa-bars"></i></button>
+        <button onclick="burger()" id="navbutton"><i class="fa-solid fa-bars"></i></button>
         <div id="wika">
             <select id="language" name="language">
                 <option value="Default">Pumili ng Wika</option>
